quick and simple featuretools example

--- a/notebooks/featuretools/featuretools-test.ipynb
+++ b/notebooks/featuretools/featuretools-test.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4           5            4   mobile 2014-01-01 01:11:30"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "4             371           1 2014-01-01 00:04:20          3   31.54"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,18 +346,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Depth test\n",
+    "\n",
+    "If we set depth as 1, it will only join sessions, not transactions, which requires de"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "feature_matrix_customers, features_defs = ft.dfs(entities=entities,\n",
     "                                                 relationships=relationships,\n",
-    "                                                 target_entity=\"customers\")"
+    "                                                 target_entity=\"customers\",\n",
+    "                                                max_depth=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -385,35 +397,17 @@
        "      <th>COUNT(sessions)</th>\n",
        "      <th>NUM_UNIQUE(sessions.device)</th>\n",
        "      <th>MODE(sessions.device)</th>\n",
-       "      <th>SUM(transactions.amount)</th>\n",
-       "      <th>STD(transactions.amount)</th>\n",
-       "      <th>MAX(transactions.amount)</th>\n",
-       "      <th>SKEW(transactions.amount)</th>\n",
-       "      <th>MIN(transactions.amount)</th>\n",
-       "      <th>MEAN(transactions.amount)</th>\n",
-       "      <th>...</th>\n",
-       "      <th>NUM_UNIQUE(sessions.MODE(transactions.product_id))</th>\n",
-       "      <th>NUM_UNIQUE(sessions.DAY(session_start))</th>\n",
-       "      <th>NUM_UNIQUE(sessions.YEAR(session_start))</th>\n",
-       "      <th>NUM_UNIQUE(sessions.MONTH(session_start))</th>\n",
-       "      <th>NUM_UNIQUE(sessions.WEEKDAY(session_start))</th>\n",
-       "      <th>MODE(sessions.MODE(transactions.product_id))</th>\n",
-       "      <th>MODE(sessions.DAY(session_start))</th>\n",
-       "      <th>MODE(sessions.YEAR(session_start))</th>\n",
-       "      <th>MODE(sessions.MONTH(session_start))</th>\n",
-       "      <th>MODE(sessions.WEEKDAY(session_start))</th>\n",
+       "      <th>DAY(join_date)</th>\n",
+       "      <th>DAY(date_of_birth)</th>\n",
+       "      <th>YEAR(join_date)</th>\n",
+       "      <th>YEAR(date_of_birth)</th>\n",
+       "      <th>MONTH(join_date)</th>\n",
+       "      <th>MONTH(date_of_birth)</th>\n",
+       "      <th>WEEKDAY(join_date)</th>\n",
+       "      <th>WEEKDAY(date_of_birth)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>customer_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -435,23 +429,14 @@
        "      <td>8</td>\n",
        "      <td>3</td>\n",
        "      <td>mobile</td>\n",
-       "      <td>9025.62</td>\n",
-       "      <td>40.442059</td>\n",
-       "      <td>139.43</td>\n",
-       "      <td>0.019698</td>\n",
-       "      <td>5.81</td>\n",
-       "      <td>71.631905</td>\n",
-       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1994</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -459,23 +444,14 @@
        "      <td>7</td>\n",
        "      <td>3</td>\n",
        "      <td>desktop</td>\n",
-       "      <td>7200.28</td>\n",
-       "      <td>37.705178</td>\n",
-       "      <td>146.81</td>\n",
-       "      <td>0.098259</td>\n",
-       "      <td>8.73</td>\n",
-       "      <td>77.422366</td>\n",
-       "      <td>...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>1986</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -483,23 +459,14 @@
        "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>desktop</td>\n",
-       "      <td>6236.62</td>\n",
-       "      <td>43.683296</td>\n",
-       "      <td>149.15</td>\n",
-       "      <td>0.418230</td>\n",
-       "      <td>5.89</td>\n",
-       "      <td>67.060430</td>\n",
-       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -507,23 +474,14 @@
        "      <td>8</td>\n",
        "      <td>3</td>\n",
        "      <td>mobile</td>\n",
-       "      <td>8727.68</td>\n",
-       "      <td>45.068765</td>\n",
-       "      <td>149.95</td>\n",
-       "      <td>-0.036348</td>\n",
-       "      <td>5.73</td>\n",
-       "      <td>80.070459</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -531,27 +489,17 @@
        "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>mobile</td>\n",
-       "      <td>6349.66</td>\n",
-       "      <td>44.095630</td>\n",
-       "      <td>149.02</td>\n",
-       "      <td>-0.025941</td>\n",
-       "      <td>7.55</td>\n",
-       "      <td>80.375443</td>\n",
-       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 73 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -563,122 +511,32 @@
        "4              60091                8                            3   \n",
        "5              60091                6                            3   \n",
        "\n",
-       "            MODE(sessions.device)  SUM(transactions.amount)  \\\n",
-       "customer_id                                                   \n",
-       "1                          mobile                   9025.62   \n",
-       "2                         desktop                   7200.28   \n",
-       "3                         desktop                   6236.62   \n",
-       "4                          mobile                   8727.68   \n",
-       "5                          mobile                   6349.66   \n",
+       "            MODE(sessions.device)  DAY(join_date)  DAY(date_of_birth)  \\\n",
+       "customer_id                                                             \n",
+       "1                          mobile              17                  18   \n",
+       "2                         desktop              15                  18   \n",
+       "3                         desktop              13                  21   \n",
+       "4                          mobile               8                  15   \n",
+       "5                          mobile              17                  28   \n",
        "\n",
-       "             STD(transactions.amount)  MAX(transactions.amount)  \\\n",
-       "customer_id                                                       \n",
-       "1                           40.442059                    139.43   \n",
-       "2                           37.705178                    146.81   \n",
-       "3                           43.683296                    149.15   \n",
-       "4                           45.068765                    149.95   \n",
-       "5                           44.095630                    149.02   \n",
+       "             YEAR(join_date)  YEAR(date_of_birth)  MONTH(join_date)  \\\n",
+       "customer_id                                                           \n",
+       "1                       2011                 1994                 4   \n",
+       "2                       2012                 1986                 4   \n",
+       "3                       2011                 2003                 8   \n",
+       "4                       2011                 2006                 4   \n",
+       "5                       2010                 1984                 7   \n",
        "\n",
-       "             SKEW(transactions.amount)  MIN(transactions.amount)  \\\n",
-       "customer_id                                                        \n",
-       "1                             0.019698                      5.81   \n",
-       "2                             0.098259                      8.73   \n",
-       "3                             0.418230                      5.89   \n",
-       "4                            -0.036348                      5.73   \n",
-       "5                            -0.025941                      7.55   \n",
-       "\n",
-       "             MEAN(transactions.amount)  ...  \\\n",
-       "customer_id                             ...   \n",
-       "1                            71.631905  ...   \n",
-       "2                            77.422366  ...   \n",
-       "3                            67.060430  ...   \n",
-       "4                            80.070459  ...   \n",
-       "5                            80.375443  ...   \n",
-       "\n",
-       "             NUM_UNIQUE(sessions.MODE(transactions.product_id))  \\\n",
-       "customer_id                                                       \n",
-       "1                                                            4    \n",
-       "2                                                            4    \n",
-       "3                                                            4    \n",
-       "4                                                            5    \n",
-       "5                                                            5    \n",
-       "\n",
-       "             NUM_UNIQUE(sessions.DAY(session_start))  \\\n",
-       "customer_id                                            \n",
-       "1                                                  1   \n",
-       "2                                                  1   \n",
-       "3                                                  1   \n",
-       "4                                                  1   \n",
-       "5                                                  1   \n",
-       "\n",
-       "             NUM_UNIQUE(sessions.YEAR(session_start))  \\\n",
-       "customer_id                                             \n",
-       "1                                                   1   \n",
-       "2                                                   1   \n",
-       "3                                                   1   \n",
-       "4                                                   1   \n",
-       "5                                                   1   \n",
-       "\n",
-       "             NUM_UNIQUE(sessions.MONTH(session_start))  \\\n",
-       "customer_id                                              \n",
-       "1                                                    1   \n",
-       "2                                                    1   \n",
-       "3                                                    1   \n",
-       "4                                                    1   \n",
-       "5                                                    1   \n",
-       "\n",
-       "             NUM_UNIQUE(sessions.WEEKDAY(session_start))  \\\n",
-       "customer_id                                                \n",
-       "1                                                      1   \n",
-       "2                                                      1   \n",
-       "3                                                      1   \n",
-       "4                                                      1   \n",
-       "5                                                      1   \n",
-       "\n",
-       "             MODE(sessions.MODE(transactions.product_id))  \\\n",
-       "customer_id                                                 \n",
-       "1                                                       4   \n",
-       "2                                                       3   \n",
-       "3                                                       1   \n",
-       "4                                                       1   \n",
-       "5                                                       3   \n",
-       "\n",
-       "             MODE(sessions.DAY(session_start))  \\\n",
-       "customer_id                                      \n",
-       "1                                            1   \n",
-       "2                                            1   \n",
-       "3                                            1   \n",
-       "4                                            1   \n",
-       "5                                            1   \n",
-       "\n",
-       "             MODE(sessions.YEAR(session_start))  \\\n",
-       "customer_id                                       \n",
-       "1                                          2014   \n",
-       "2                                          2014   \n",
-       "3                                          2014   \n",
-       "4                                          2014   \n",
-       "5                                          2014   \n",
-       "\n",
-       "             MODE(sessions.MONTH(session_start))  \\\n",
-       "customer_id                                        \n",
-       "1                                              1   \n",
-       "2                                              1   \n",
-       "3                                              1   \n",
-       "4                                              1   \n",
-       "5                                              1   \n",
-       "\n",
-       "             MODE(sessions.WEEKDAY(session_start))  \n",
-       "customer_id                                         \n",
-       "1                                                2  \n",
-       "2                                                2  \n",
-       "3                                                2  \n",
-       "4                                                2  \n",
-       "5                                                2  \n",
-       "\n",
-       "[5 rows x 73 columns]"
+       "             MONTH(date_of_birth)  WEEKDAY(join_date)  WEEKDAY(date_of_birth)  \n",
+       "customer_id                                                                    \n",
+       "1                               7                   6                       0  \n",
+       "2                               8                   6                       0  \n",
+       "3                              11                   5                       4  \n",
+       "4                               8                   4                       1  \n",
+       "5                               7                   5                       5  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
