how feature tools alg works

--- a/notebooks/featuretools/deep_fs_syn_test.ipynb
+++ b/notebooks/featuretools/deep_fs_syn_test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "    sessions.customer_id -> customers.customer_id"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,12 @@
     "                                       target_entity=\"customers\",\n",
     "                                       agg_primitives=[\"count\"],\n",
     "                                       trans_primitives=[\"month\"],\n",
-    "                                       max_depth=1)"
+    "                                       max_depth=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -88,11 +88,13 @@
        "      <th></th>\n",
        "      <th>zip_code</th>\n",
        "      <th>COUNT(sessions)</th>\n",
+       "      <th>COUNT(transactions)</th>\n",
        "      <th>MONTH(join_date)</th>\n",
        "      <th>MONTH(date_of_birth)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>customer_id</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -104,6 +106,7 @@
        "      <th>1</th>\n",
        "      <td>60091</td>\n",
        "      <td>8</td>\n",
+       "      <td>126</td>\n",
        "      <td>4</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
@@ -111,6 +114,7 @@
        "      <th>2</th>\n",
        "      <td>13244</td>\n",
        "      <td>7</td>\n",
+       "      <td>93</td>\n",
        "      <td>4</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -118,6 +122,7 @@
        "      <th>3</th>\n",
        "      <td>13244</td>\n",
        "      <td>6</td>\n",
+       "      <td>93</td>\n",
        "      <td>8</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -125,6 +130,7 @@
        "      <th>4</th>\n",
        "      <td>60091</td>\n",
        "      <td>8</td>\n",
+       "      <td>109</td>\n",
        "      <td>4</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -132,6 +138,7 @@
        "      <th>5</th>\n",
        "      <td>60091</td>\n",
        "      <td>6</td>\n",
+       "      <td>79</td>\n",
        "      <td>7</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
@@ -140,22 +147,54 @@
        "</div>"
       ],
       "text/plain": [
-       "            zip_code  COUNT(sessions)  MONTH(join_date)  MONTH(date_of_birth)\n",
-       "customer_id                                                                  \n",
-       "1              60091                8                 4                     7\n",
-       "2              13244                7                 4                     8\n",
-       "3              13244                6                 8                    11\n",
-       "4              60091                8                 4                     8\n",
-       "5              60091                6                 7                     7"
+       "            zip_code  COUNT(sessions)  COUNT(transactions)  MONTH(join_date)  \\\n",
+       "customer_id                                                                    \n",
+       "1              60091                8                  126                 4   \n",
+       "2              13244                7                   93                 4   \n",
+       "3              13244                6                   93                 8   \n",
+       "4              60091                8                  109                 4   \n",
+       "5              60091                6                   79                 7   \n",
+       "\n",
+       "             MONTH(date_of_birth)  \n",
+       "customer_id                        \n",
+       "1                               7  \n",
+       "2                               8  \n",
+       "3                              11  \n",
+       "4                               8  \n",
+       "5                               7  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "feature_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Feature: zip_code>,\n",
+       " <Feature: COUNT(sessions)>,\n",
+       " <Feature: COUNT(transactions)>,\n",
+       " <Feature: MONTH(join_date)>,\n",
+       " <Feature: MONTH(date_of_birth)>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_defs"
    ]
   },
   {
